# rust-starter

./: .gitattributes  .gitignore  Cargo.toml  README.md  lefthook.yml  tarpaulin.toml
.github/: dependabot.yaml
.github/workflows/: build.yaml  check.yaml  ci.yaml  package.yaml  test.yaml
src/: lib.rs  main.rs
tests/: cli.rs
