[package]
name = "rust-starter"
version = "0.1.0"
authors = ["Alfi Maulana <alfi.maulana.f@gmail.com>"]
edition = "2021"
description = "A starter Rust crate for generating Fibonacci sequences"
repository = "https://github.com/threeal/rust-starter"
license = "Unlicense"
keywords = ["rust", "starter", "fibonacci"]
categories = ["algorithms", "mathematics"]

[dependencies]
clap = "4.5.30"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
