[package]
name = "bonacci"
version = "0.0.0"
authors = ["Leonardo Bonacci <leonardo@bonacci.com>"]
edition = "2021"
description = "An example Rust project for generating a Fibonacci sequence"
repository = "https://github.com/leonardo/bonacci"
license = "Unlicense"
keywords = ["example", "fibonacci"]
categories = ["algorithms", "mathematics"]

[dependencies]
clap = "4.5.47"
